--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 .target/
 .class
 /target/
+java/shipping-dashboard/shippingdashboard-facade/target/classes/application-dev.properties
+java/shipping-dashboard/shippingdashboard-facade/target/classes/application-qa.properties
+java/shipping-dashboard/shippingdashboard-facade/target/classes/application.properties
+java/shipping-dashboard/shippingdashboard-service/target/classes/application-dev.properties
+java/shipping-dashboard/shippingdashboard-service/target/classes/application-qa.properties
+java/shipping-dashboard/shippingdashboard-service/target/classes/application.properties
