--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,9 @@ java/shipping-dashboard/shippingdashboard-service/target/classes/application.pro
 *.class
 *.lst
 *.jar
-*.properties
 *.original
+*.dumpstream
+java/shipping-dashboard/shippingdashboard-service/target/classes/application-uat.properties
+java/shipping-dashboard/shippingdashboard-service/target/maven-archiver/pom.properties
+java/shipping-dashboard/shippingdashboard-shared/target/maven-archiver/pom.properties
+java/shipping-dashboard/shippingdashboard-facade/target/maven-archiver/pom.properties
