--- a/frontend/dashboard/package.json
+++ b/frontend/dashboard/package.json
@@ -8,8 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "build-prod" : "ng build --configuration production"
-
+    "build-prod": "ng build --configuration production"
   },
   "private": true,
   "dependencies": {
@@ -23,12 +22,16 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ng-bootstrap/ng-bootstrap": "~15.0.0",
     "@ngx-loading-bar/core": "6.0.2",
     "angular-highcharts": "16.0.0",
     "bootstrap": "5.3.2",
     "highcharts": "11.1.0",
     "highcharts-angular": "3.1.2",
+    "ng2-charts": "5.0.3",
+    "ngx-bootstrap": "11.0.2",
     "rxjs": "~7.8.0",
+    "sweetalert2": "11.10.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -46,6 +49,7 @@
     "@types/object-path": "0.11.2",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
+    "chart.js": "3.9.1",
     "eslint": "^8.49.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
