--- a/frontend/dashboard/package.json
+++ b/frontend/dashboard/package.json
@@ -31,12 +31,12 @@
     "ng2-charts": "5.0.3",
     "ngx-bootstrap": "11.0.2",
     "rxjs": "~7.8.0",
-    "sweetalert2": "11.10.1",
+    "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.4",
+    "@angular-devkit/build-angular": "^16.2.10",
     "@angular-eslint/builder": "16.2.0",
     "@angular-eslint/eslint-plugin": "16.2.0",
     "@angular-eslint/eslint-plugin-template": "16.2.0",
