chart page updated

--- a/frontend/dashboard/package.json
+++ b/frontend/dashboard/package.json
@@ -24,11 +24,12 @@
     "@angular/router": "^16.2.0",
     "@ng-bootstrap/ng-bootstrap": "~15.0.0",
     "@ngx-loading-bar/core": "6.0.2",
+    "@swimlane/ngx-charts": "^20.5.0",
     "angular-highcharts": "16.0.0",
     "bootstrap": "5.3.2",
-    "highcharts": "11.1.0",
+    "highcharts": "^11.1.0",
     "highcharts-angular": "3.1.2",
-    "ng2-charts": "5.0.3",
+    "ng2-charts": "^5.0.4",
     "ngx-bootstrap": "11.0.2",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.6.13",
@@ -49,7 +50,7 @@
     "@types/object-path": "0.11.2",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
-    "chart.js": "3.9.1",
+    "chart.js": "^4.4.1",
     "eslint": "^8.49.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
