--- a/frontend/dashboard/package.json
+++ b/frontend/dashboard/package.json
@@ -26,7 +26,7 @@
     "@ngx-loading-bar/core": "6.0.2",
     "@swimlane/ngx-charts": "^20.5.0",
     "angular-highcharts": "16.0.0",
-    "bootstrap": "5.3.2",
+    "bootstrap": "^5.3.2",
     "highcharts": "^11.1.0",
     "highcharts-angular": "3.1.2",
     "ng2-charts": "^5.0.4",
