--- a/java/shipping-dashboard/shippingdashboard-facade/src/main/resources/application.properties
+++ b/java/shipping-dashboard/shippingdashboard-facade/src/main/resources/application.properties
@@ -9,11 +9,11 @@ management.endpoints.web.exposure.include=*
 # server.ssl.key-store-password=ydigit
 # server.ssl.key-alias=baeldung
 
-server.ssl.key-store = keystore.p12
-server.ssl.key-store-password = Dec-pass23
-server.ssl.keyStoreType = PKCS12
-server.ssl.keyAlias = tomcat
+# server.ssl.key-store = keystore.p12
+# server.ssl.key-store-password = Dec-pass23
+# server.ssl.keyStoreType = PKCS12
+# server.ssl.keyAlias = tomcat
 
 
-server.ssl.enabled=true
+# server.ssl.enabled=true
 server.port=8080
