--- a/java/shipping-dashboard/shippingdashboard-shared/pom.xml
+++ b/java/shipping-dashboard/shippingdashboard-shared/pom.xml
@@ -23,6 +23,8 @@
 
 	<build>
 		<plugins>
+
+
 <!--			<plugin>-->
 <!--				<groupId>org.springframework.boot</groupId>-->
 <!--				<artifactId>spring-boot-maven-plugin</artifactId>-->
@@ -53,5 +55,16 @@
 
 		</plugins>
 	</build>
+	<dependencies>
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-validation</artifactId>
+	</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
 </project>
