--- a/java/shipping-dashboard/shippingdashboard-facade/src/main/resources/application.properties
+++ b/java/shipping-dashboard/shippingdashboard-facade/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+#spring.profiles.active=dev
 env=common
 loginservice.url = http://localhost:9443/
 dashboard.service.url = http://localhost:9443/
@@ -17,3 +17,11 @@ management.endpoints.web.exposure.include=*
 
 # server.ssl.enabled=true
 server.port=8080
+
+spring.datasource.url=jdbc:oracle:thin:@115.243.88.131:1521/devphp
+spring.datasource.username=devphp
+spring.datasource.password=devphp2k23
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+spring.security.user.name=wds
+spring.security.user.password=12345
