--- a/java/shipping-dashboard/shippingdashboard-facade/src/main/resources/application.properties
+++ b/java/shipping-dashboard/shippingdashboard-facade/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.profiles.active=dev
+spring.profiles.active=secdisable
 env=common
 loginservice.url = http://localhost:9443/
 dashboard.service.url = http://localhost:9443/
