--- a/java/shipping-dashboard/shippingdashboard-facade/pom.xml
+++ b/java/shipping-dashboard/shippingdashboard-facade/pom.xml
@@ -24,9 +24,20 @@
 	<description>shippingdashboard-facade</description>
 
 	<build>
-			<plugins>
-
-			</plugins>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+						</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 
 	<dependencies>
