--- a/java/shipping-dashboard/shippingdashboard-facade/src/main/resources/application.properties
+++ b/java/shipping-dashboard/shippingdashboard-facade/src/main/resources/application.properties
@@ -5,17 +5,18 @@ dashboard.service.url = http://localhost:9443/
 management.endpoints.web.exposure.include=*
 
 # server.ssl.key-store-type=PKCS12
-# server.ssl.key-store=classpath:keystore/baeldung.p12
-# server.ssl.key-store-password=ydigit
+# server.ssl.key-store=classpath:keystore/onlinetracking_co.p12
+# server.ssl.key-store-password=Dec-pass23
 # server.ssl.key-alias=baeldung
+#server.ssl.key-store=classpath:onlinetracking_co.p12
 
-# server.ssl.key-store = keystore.p12
-# server.ssl.key-store-password = Dec-pass23
-# server.ssl.keyStoreType = PKCS12
-# server.ssl.keyAlias = tomcat
+#Server
+server.ssl.key-store = onlinetracking_co.p12
+server.ssl.key-store-password = Dec-pass23
+server.ssl.keyStoreType = PKCS12
 
 
-# server.ssl.enabled=true
+server.ssl.enabled=true
 server.port=8080
 
 spring.datasource.url=jdbc:oracle:thin:@115.243.88.131:1521/devphp
@@ -23,5 +24,5 @@ spring.datasource.username=devphp
 spring.datasource.password=devphp2k23
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
-spring.security.user.name=wds
-spring.security.user.password=12345
+#spring.security.user.name=wds
+#spring.security.user.password=12345
