--- a/frontend/dashboard/package.json
+++ b/frontend/dashboard/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^5.3.2",
     "highcharts": "^11.1.0",
     "highcharts-angular": "3.1.2",
+    "jwt-decode": "^4.0.0",
     "ng2-charts": "^5.0.4",
     "ngx-bootstrap": "11.0.2",
     "rxjs": "~7.8.0",
