--- a/java/shipping-dashboard/shippingdashboard-facade/src/main/resources/application.properties
+++ b/java/shipping-dashboard/shippingdashboard-facade/src/main/resources/application.properties
@@ -4,19 +4,20 @@ loginservice.url = http://localhost:9443/
 dashboard.service.url = http://localhost:9443/
 management.endpoints.web.exposure.include=*
 
-# server.ssl.key-store-type=PKCS12
+
 # server.ssl.key-store=classpath:keystore/onlinetracking_co.p12
 # server.ssl.key-store-password=Dec-pass23
 # server.ssl.key-alias=baeldung
 #server.ssl.key-store=classpath:onlinetracking_co.p12
 
 #Server
-#server.ssl.key-store = onlinetracking_co.p12
-#server.ssl.key-store-password = Dec-pass23
-#server.ssl.keyStoreType = PKCS12
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store = onlinetracking_co.p12
+server.ssl.key-store-password = Dec-pass23
+server.ssl.keyStoreType = PKCS12
 
 
-#server.ssl.enabled=true
+server.ssl.enabled=true
 server.port=8080
 
 spring.datasource.url=jdbc:oracle:thin:@115.243.88.131:1521/devphp
