--- a/java/shipping-dashboard/shippingdashboard-service/src/main/resources/application-dev.properties
+++ b/java/shipping-dashboard/shippingdashboard-service/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 env=DEV
-spring.datasource.url=jdbc:oracle:thin:@115.243.88.131:1521/histdb1
+spring.datasource.url=jdbc:oracle:thin:@52.77.15.102:1521/devdb1
 spring.datasource.username=histdb1
-spring.datasource.password=histdb2k21
+spring.datasource.password=devdb2k23
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 server.port=9443
 
