--- a/java/shipping-dashboard/shippingdashboard-facade/src/main/resources/application-secdisable.properties
+++ b/java/shipping-dashboard/shippingdashboard-facade/src/main/resources/application-secdisable.properties
@@ -7,8 +7,8 @@ management.endpoints.web.exposure.include=*
 
 server.port=8080
 
-spring.datasource.url=jdbc:oracle:thin:@115.243.88.131:1521/devphp
-spring.datasource.username=devphp
-spring.datasource.password=devphp2k23
+spring.datasource.url=jdbc:oracle:thin:@52.77.15.102:1521/devdb1
+spring.datasource.username=histdb1
+spring.datasource.password=devdb2k23
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
